# p22_group76

./: .env-vars  .gitignore  .pre-commit-config.yaml  HPC-guide.md  LICENSE.TXT  README.md  README.txt  filename_data.csv  jobscript.sh  pyproject.toml
CNN_baseline_py/: CNN_baseline.ipynb  dataset.py  main.py  metrics.py  model.py  simple_test.py  train.py  utils.py  visualize.py
other_tests_and_visuals/: dataframe-tester.py  dtu-dl-p22.py  join_mask_follder_to_dataframe.ipynb
preprocessing/: dataframe_creator.py
